ViSP 2.4.x
  - New classes
  - New Features
  - Bug fix and improvement
	- vpDot2: Changes in searchDotsInArea() :
	    the algorithm search now in the boundingboxes of the bad dots.
	    bug fixed : we could fall in an infinite loop.
	  Split accuracy private variable into grayLevelPrecision and 
	  sizePrecision.
	- vpDisplayX : better management of endianness
	- vpDisplayGTK, vpDisplayGDI, vpDisplayD3D : 
	  The behavior of the following methods change to be similar
	  to vpDisplayX:
	  . getClick(..., button) : The button used to click is now an output
	  . getClickUp(..., button) : The button used to click is now an output
	  Moreover, in vpDisplayGDI, vpDisplayD3D middle button is now managed
  - Testing:
	- test/video-device/testClick.cpp was added
  - Documentation improvement
	- vpRobotAfma6: example usage of getPosition() was updated
	- vpDisplayGDI is included in the doxygen documentation
----------------------------------------------	
ViSP 2.4.1 (released May 16, 2007)
  - New classes
        - vpRect class for rectangle manipulations, display	
        - vpHistogram,vpHistogramPeak and vpHistogramValey classes to
	  handle gray level image histogram
	- vpSubPixel for sub-pixel manipulations	
	- vpMouseButton for mouse click identification	
  - New Features
        - MinGW supported
	- ViSP as a third party library in an other project.
	  It is now possible to use ViSP as a third party project without
	  installing ViSP by make install. ViSP can now be used
	  directly from the build dir, or from the install dir, or
	  from a package (NSIS, ...)
	- vpRobotCamera It is now possible to add a sampling time so that
          the behavior of this simulated camera is quite realistic. This 
	  sampling time is set by default to 40 ms.
	- vpExponentialMap A sampling time was introduced.	
  - Bug fix and improvement
	- vpImage: getWidth() and getHeight() replace getCols() and getRows() 
	  which are now obsolete.